add first part of login

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,5 +1,11 @@
 <GridLayout>
     <GridLayout class="background">
-
     </GridLayout>
+    <DockLayout style="padding: 25">
+        <StackLayout dock="top">
+            <Label class="title" text="Sign In"></Label>
+        </StackLayout>
+        <GridLayout dock="bottom">
+        </GridLayout>
+    </DockLayout>
 </GridLayout>
