--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -1,3 +1,6 @@
 .background{
     background-image: url("res://background_login");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
